--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -29,6 +29,10 @@
     display: flex;
     align-items: center;
 }
+.sustainability-icon {
+    margin-bottom: 1rem;
+
+}
 
 .nav-logo-img {
     height: 36px;
